<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="service_start">Activating logging service</string>
    <string name="service_gpsstatus">Logging: %1$s (%2$s with %3$d satellites)</string>
    <string name="service_gpsnostatus">Logging: %1$s (Precision %2$s)</string>
    <string name="service_networkstatus">Logging: %1$s (%2$s with cell tower and wifi)</string>
    <string name="service_gpsdisabled">GPS is disabled, logging is without effect.</string>
    <string name="service_gpsenabled">GPS is enabled, commencing logging.</string>
    <string name="service_connectiondisabled">Network is disabled, network location logging is without effect.</string>
    <string name="service_datadisabled">Network positioning is disabled, logging is without effect.</string>
    <string name="service_dataenabled">Network positioning is enabled, commencing logging.</string>
    <string name="service_gpsproblem">Receiving no location information</string>
    <string name="time_and_speed">At %1$s going %2$s</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="language">Language / Idioma</string>
    <string name="unit">Unit</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="options">Options</string>
    <string name="password">Password</string>
    <string name="new_register_account">New to Acount? Register here</string>
    <string name="app_references">Application Preferences</string>
    <string name="account_setting">Account Setting</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="upgrade">•Upgrade</string>
    <string name="upgrade1">Upgrade</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="init_conversion">• Unit Conversion:</string>
    <string name="app_language">Language:</string>
    <string name="app_age">• Age:</string>
    <string name="app_gender">• Gender:</string>
    <string name="app_height">• Height:</string>
    <string name="app_weight">• Weight: Current:</string>
    <string name="app_current">Current:</string>
    <string name="app_goal">Goal:</string>

    <!-- Archive Activity -->
    <string name="view_an_old_run">View an old run</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>

    <!-- Home Activity -->
    <string name="go_on_a_run">Go on a run</string>
    <string name="my_archive">My Archive</string>
    <string name="my_friends">My Friends</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="username">UserName</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="weight">Weight</string>
    <string name="user_type">User Type</string>
    <string name="register_new_account">Register New Account</string>
    <string name="account_exist">Already has account! Login here</string>

    <!-- Run option activity -->
    <string name="running_option">Running Option</string>
    <string name="timed_run">Timed Run</string>
    <string name="distance_run">Distance Run</string>
    <string name="calorie_run">Calorie Run</string>
    <string name="free_run">Free Run</string>
    <string name="smart_run">Smart Run</string>
    <string name="friend_run">Friend Run</string>
    <string name="begin">Begin!</string>

    <!-- Upgrade activity -->
    <string name="card_type">Card type:</string>
    <string name="card">Card #:</string>
    <string name="exp_date">Exp. Date:</string>
    <string name="security">Security #:</string>
    <string name="agree_term">I agree to the terms</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_friend">FriendActivity</string>

</resources>
