<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffd3d3d3"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@layout/header_gradient"
        android:paddingBottom="5dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip" >

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/upgrade"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dip" >

            <TextView
                style="@style/upgrade_title"
                android:text="@string/card_type" />

            <Spinner
                android:id="@+id/cardType"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dip" >

            <TextView
                style="@style/upgrade_title"
                android:text="@string/card" />

            <EditText
                android:id="@+id/card"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dip" >

            <TextView
                style="@style/upgrade_title"
                android:text="@string/exp_date" />

            <Button
                android:onClick="showDatePickerDialog"
                android:id="@+id/expireDate"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button_spinner"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dip" >

            <TextView
                style="@style/upgrade_title"
                android:text="@string/security" />

            <EditText
                android:id="@+id/security"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="20dip"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                style="@style/upgrade_title"
                android:text="@string/agree_term" />
            <CheckBox
                android:id="@+id/agree"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:gravity="center_vertical" >
            </CheckBox>
        </LinearLayout>

        <Button
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            android:id="@+id/upgradeBtn"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:layout_marginTop="30dip"
            android:onClick="onClick"
            android:text="@string/upgrade" />
    </LinearLayout>

    <!-- Link to Login Screen -->

</LinearLayout>